feat: utilisation d’un keystore pour signer les tokens JWT

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,3 +23,8 @@ vaadin.frontend.hotdeploy=true
 yoxo.auth.ng-client-id=${NG_CLIENT_ID}
 yoxo.auth.ng-client-secret=${NG_CLIENT_SECRET}
 yoxo.auth.ng-redirect-uri=${NG_REDIRECT_URI}
+
+jwt.keystore.path=${KEYSTORE_PATH}
+jwt.keystore.password=${KEYSTORE_PASSWORD}
+jwt.key.alias=${KEY_ALIAS}
+jwt.key.password=${KEY_PASSWORD}
