--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,9 +8,10 @@ spring.datasource.url=${DATABASE_URL}
 spring.jpa.hibernate.ddl-auto=update
 
 spring.data.redis.host=${REDIS_HOST}
-spring.data.redis.port=${REDIS_PORT}
-spring.data.redis.username=${REDIS_USERNAME}
+spring.data.redis.port=${REDIS_PORT:6379}
+spring.data.redis.username=${REDIS_USERNAME:"default"}
 spring.data.redis.password=${REDIS_PASSWORD}
+spring.data.redis.ssl.enabled=${REDIS_SSL:false}
 
 logging.level.root=INFO
 logging.level.org.springframework.web=INFO
