--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
     "@polymer/polymer": "3.5.2",
     "@radix-ui/react-checkbox": "^1.3.3",
     "@radix-ui/react-slot": "^1.2.3",
-    "@tailwindcss/vite": "^4.1.12",
     "@vaadin/bundles": "24.8.5",
     "@vaadin/common-frontend": "0.0.19",
     "@vaadin/hilla-file-router": "24.8.6",
@@ -38,6 +37,7 @@
     "tailwindcss": "^4.1.12"
   },
   "devDependencies": {
+    "@tailwindcss/vite": "4.1.12",
     "@babel/preset-react": "7.27.1",
     "@preact/signals-react-transform": "0.5.1",
     "@rollup/plugin-replace": "6.0.2",
@@ -141,25 +141,34 @@
       "@vaadin/vaadin-development-mode-detector": "$@vaadin/vaadin-development-mode-detector",
       "@vaadin/vaadin-usage-statistics": "$@vaadin/vaadin-usage-statistics",
       "@vaadin/react-components": "$@vaadin/react-components",
-      "@vaadin/common-frontend": "$@vaadin/common-frontend",
-      "react-dom": "$react-dom",
-      "@vaadin/hilla-frontend": "$@vaadin/hilla-frontend",
-      "@vaadin/hilla-react-auth": "$@vaadin/hilla-react-auth",
-      "react": "$react",
-      "react-router": "$react-router",
-      "@vaadin/hilla-react-crud": "$@vaadin/hilla-react-crud",
-      "@vaadin/hilla-file-router": "$@vaadin/hilla-file-router",
-      "construct-style-sheets-polyfill": "$construct-style-sheets-polyfill",
-      "@vaadin/hilla-react-i18n": "$@vaadin/hilla-react-i18n",
-      "lit": "$lit",
       "@polymer/polymer": "$@polymer/polymer",
+      "@radix-ui/react-checkbox": "$@radix-ui/react-checkbox",
+      "@radix-ui/react-slot": "$@radix-ui/react-slot",
+      "@tailwindcss/vite": "$@tailwindcss/vite",
+      "@vaadin/common-frontend": "$@vaadin/common-frontend",
+      "@vaadin/hilla-file-router": "$@vaadin/hilla-file-router",
+      "@vaadin/hilla-frontend": "$@vaadin/hilla-frontend",
       "@vaadin/hilla-lit-form": "$@vaadin/hilla-lit-form",
+      "@vaadin/hilla-react-auth": "$@vaadin/hilla-react-auth",
+      "@vaadin/hilla-react-crud": "$@vaadin/hilla-react-crud",
       "@vaadin/hilla-react-form": "$@vaadin/hilla-react-form",
+      "@vaadin/hilla-react-i18n": "$@vaadin/hilla-react-i18n",
       "@vaadin/hilla-react-signals": "$@vaadin/hilla-react-signals",
-      "date-fns": "$date-fns",
-      "@vaadin/vaadin-themable-mixin": "$@vaadin/vaadin-themable-mixin",
       "@vaadin/vaadin-lumo-styles": "$@vaadin/vaadin-lumo-styles",
       "@vaadin/vaadin-material-styles": "$@vaadin/vaadin-material-styles",
+      "@vaadin/vaadin-themable-mixin": "$@vaadin/vaadin-themable-mixin",
+      "class-variance-authority": "$class-variance-authority",
+      "clsx": "$clsx",
+      "construct-style-sheets-polyfill": "$construct-style-sheets-polyfill",
+      "date-fns": "$date-fns",
+      "lit": "$lit",
+      "lucide-react": "$lucide-react",
+      "next-themes": "$next-themes",
+      "react": "$react",
+      "react-dom": "$react-dom",
+      "react-router": "$react-router",
+      "tailwind-merge": "$tailwind-merge",
+      "tailwindcss": "$tailwindcss",
       "@vaadin/a11y-base": "24.8.5",
       "@vaadin/accordion": "24.8.5",
       "@vaadin/app-layout": "24.8.5",
@@ -218,16 +227,7 @@
       "@vaadin/upload": "24.8.5",
       "@vaadin/router": "2.0.0",
       "@vaadin/vertical-layout": "24.8.5",
-      "@vaadin/virtual-list": "24.8.5",
-      "@radix-ui/react-slot": "$@radix-ui/react-slot",
-      "@tailwindcss/vite": "$@tailwindcss/vite",
-      "class-variance-authority": "$class-variance-authority",
-      "clsx": "$clsx",
-      "lucide-react": "$lucide-react",
-      "tailwind-merge": "$tailwind-merge",
-      "tailwindcss": "$tailwindcss",
-      "next-themes": "$next-themes",
-      "@radix-ui/react-checkbox": "$@radix-ui/react-checkbox"
+      "@vaadin/virtual-list": "24.8.5"
     }
   }
 }
