--- a/package.json
+++ b/package.json
@@ -3,15 +3,19 @@
   "license": "UNLICENSED",
   "type": "module",
   "dependencies": {
+    "@hookform/resolvers": "^5.2.2",
     "@polymer/polymer": "3.5.2",
+    "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-checkbox": "^1.3.3",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-radio-group": "^1.3.8",
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-switch": "^1.2.6",
     "@radix-ui/react-tabs": "^1.1.13",
+    "@tanstack/react-query": "^5.90.5",
     "@vaadin/bundles": "24.8.5",
     "@vaadin/common-frontend": "0.0.19",
     "@vaadin/hilla-file-router": "24.8.6",
@@ -38,10 +42,12 @@
     "next-themes": "^0.4.6",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "react-hook-form": "^7.65.0",
     "react-router": "7.6.1",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
-    "tailwindcss": "^4.1.12"
+    "tailwindcss": "^4.1.12",
+    "zod": "^4.1.12"
   },
   "devDependencies": {
     "@babel/preset-react": "7.27.1",
@@ -139,7 +145,7 @@
       "workbox-core": "7.3.0",
       "workbox-precaching": "7.3.0"
     },
-    "hash": "ec2437682feedadbca83527428a7212b45f938ef404394348864727bedbce40f"
+    "hash": "9b4df0e22c3b247af54472e73e9afd17fc735a88d4598b95bbf0d604a3429f31"
   },
   "pnpm": {
     "overrides": {
@@ -240,7 +246,11 @@
       "@radix-ui/react-separator": "$@radix-ui/react-separator",
       "@radix-ui/react-switch": "$@radix-ui/react-switch",
       "@radix-ui/react-tabs": "$@radix-ui/react-tabs",
-      "sonner": "$sonner"
+      "sonner": "$sonner",
+      "@tanstack/react-query": "$@tanstack/react-query",
+      "@hookform/resolvers": "$@hookform/resolvers",
+      "react-hook-form": "$react-hook-form",
+      "zod": "$zod"
     }
   }
 }
