--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-hook-form": "^7.65.0",
+    "react-markdown": "^10.1.0",
     "react-router": "7.6.1",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
@@ -145,7 +146,7 @@
       "workbox-core": "7.3.0",
       "workbox-precaching": "7.3.0"
     },
-    "hash": "9b4df0e22c3b247af54472e73e9afd17fc735a88d4598b95bbf0d604a3429f31"
+    "hash": "953bff7c88dc23ae2e0287a28438147785454931a20eb47a4ddf8d4a40c88801"
   },
   "pnpm": {
     "overrides": {
@@ -250,7 +251,10 @@
       "@tanstack/react-query": "$@tanstack/react-query",
       "@hookform/resolvers": "$@hookform/resolvers",
       "react-hook-form": "$react-hook-form",
-      "zod": "$zod"
+      "zod": "$zod",
+      "@radix-ui/react-alert-dialog": "$@radix-ui/react-alert-dialog",
+      "@radix-ui/react-radio-group": "$@radix-ui/react-radio-group",
+      "react-markdown": "$react-markdown"
     }
   }
 }
