--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
     "@hookform/resolvers": "^5.2.2",
     "@polymer/polymer": "3.5.2",
     "@radix-ui/react-alert-dialog": "^1.1.15",
+    "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-checkbox": "^1.3.3",
     "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-radio-group": "^1.3.8",
     "@radix-ui/react-select": "^2.2.6",
@@ -146,7 +148,7 @@
       "workbox-core": "7.3.0",
       "workbox-precaching": "7.3.0"
     },
-    "hash": "953bff7c88dc23ae2e0287a28438147785454931a20eb47a4ddf8d4a40c88801"
+    "hash": "61f7593a75ea33874c77d640bab439cc51c1d6dab207ffa1e97493c0f4bac42c"
   },
   "pnpm": {
     "overrides": {
@@ -254,7 +256,9 @@
       "zod": "$zod",
       "@radix-ui/react-alert-dialog": "$@radix-ui/react-alert-dialog",
       "@radix-ui/react-radio-group": "$@radix-ui/react-radio-group",
-      "react-markdown": "$react-markdown"
+      "react-markdown": "$react-markdown",
+      "@radix-ui/react-avatar": "$@radix-ui/react-avatar",
+      "@radix-ui/react-dropdown-menu": "$@radix-ui/react-dropdown-menu"
     }
   }
 }
