feat: add Flyway database migration and initial schema

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,12 @@ spring.datasource.url=${DATABASE_URL}
 
 #spring.jpa.hibernate.ddl-auto=update
 
+# Flyway Database Migration Configuration
+spring.flyway.enabled=true
+spring.flyway.locations=classpath:db/migration
+# Si les scripts de migration sont manquants, échouer le démarrage de l'application
+spring.flyway.fail-on-missing-locations=true
+
 spring.data.redis.host=${REDIS_HOST}
 spring.data.redis.port=${REDIS_PORT:6379}
 spring.data.redis.username=${REDIS_USERNAME:"default"}
