--- a/build.gradle
+++ b/build.gradle
@@ -44,6 +44,10 @@ dependencies {
     implementation 'redis.clients:jedis:5.1.2'
 
     implementation 'io.github.cdimascio:dotenv-java:3.2.0'
+
+    // Database migration with Flyway
+    implementation 'org.flywaydb:flyway-core'
+    implementation 'org.flywaydb:flyway-database-postgresql'
 }
 dependencyManagement {
     imports {
