feat: create /connections page

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -35,3 +35,5 @@ jwt.keystore.path=${KEYSTORE_PATH}
 jwt.keystore.password=${KEYSTORE_PASSWORD}
 jwt.key.alias=${KEY_ALIAS}
 jwt.key.password=${KEY_PASSWORD}
+
+geoip.database.path=${GEOIP2_DATABASE_PATH}
