--- a/build.gradle
+++ b/build.gradle
@@ -48,6 +48,10 @@ dependencies {
     // Database migration with Flyway
     implementation 'org.flywaydb:flyway-core'
     implementation 'org.flywaydb:flyway-database-postgresql'
+
+    // Geolocation and User-Agent parsing
+    implementation 'com.maxmind.geoip2:geoip2:4.2.0'
+    implementation 'eu.bitwalker:UserAgentUtils:1.21'
 }
 dependencyManagement {
     imports {
