--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
     "@polymer/polymer": "3.5.2",
+    "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-checkbox": "^1.3.3",
@@ -148,7 +149,7 @@
       "workbox-core": "7.3.0",
       "workbox-precaching": "7.3.0"
     },
-    "hash": "61f7593a75ea33874c77d640bab439cc51c1d6dab207ffa1e97493c0f4bac42c"
+    "hash": "129207bdc9a77bfdb5d49df785b601a943c6131acee7c669c53049864f1a7016"
   },
   "pnpm": {
     "overrides": {
@@ -258,7 +259,8 @@
       "@radix-ui/react-radio-group": "$@radix-ui/react-radio-group",
       "react-markdown": "$react-markdown",
       "@radix-ui/react-avatar": "$@radix-ui/react-avatar",
-      "@radix-ui/react-dropdown-menu": "$@radix-ui/react-dropdown-menu"
+      "@radix-ui/react-dropdown-menu": "$@radix-ui/react-dropdown-menu",
+      "@radix-ui/react-accordion": "$@radix-ui/react-accordion"
     }
   }
 }
