feat: add option to desactive GeoLocationService

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -36,4 +36,5 @@ jwt.keystore.password=${KEYSTORE_PASSWORD}
 jwt.key.alias=${KEY_ALIAS}
 jwt.key.password=${KEY_PASSWORD}
 
+geoip.enabled=${GEOIP2_ENABLED:false}
 geoip.database.path=${GEOIP2_DATABASE_PATH}
