fix: set GEOIP2_DATABASE_PATH to default ""

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -37,4 +37,4 @@ jwt.key.alias=${KEY_ALIAS}
 jwt.key.password=${KEY_PASSWORD}
 
 geoip.enabled=${GEOIP2_ENABLED:false}
-geoip.database.path=${GEOIP2_DATABASE_PATH}
+geoip.database.path=${GEOIP2_DATABASE_PATH:""}
